# LOpenHD

./: .gitmodules  CMakeLists.txt
gui/: CMakeLists.txt  lv_conf.h  lvgl_base.cpp  lvgl_base.h  settings_overlay.cpp  settings_overlay.h
gui/lib/: backends.h  driver_backends.c  mouse_cursor_icon.c
gui/lib/display_backends/: drm.c  wayland.c
gui/lib/indev_backends/: evdev.c
gui/osd/: attitude_widget.cpp  attitude_widget.h  battery_widget.cpp  battery_widget.h  osd_manager.cpp  osd_manager.h  osd_widget.cpp  osd_widget.h  soc_temp_widget.cpp  soc_temp_widget.h  text_widget.cpp  text_widget.h
gui/osd_loader/: osd_loader.cpp  osd_loader.h
src/: main.cpp
telemetry/: CMakeLists.txt  fc_telemetry.cpp  fc_telemetry.h  mavlink_handler.cpp  mavlink_handler.h  mavlink_udp.cpp  mavlink_udp.h  telemetry.cpp  telemetry.h  telemetry_state.cpp  telemetry_state.h
video/: CMakeLists.txt  drm_video.cpp  drm_video.h
